src/components/UI/ModalHeaders/Modal/style.module.css
.modal {
  position: absolute;
  top: 70px;
  left: 0;
  width: 100%;
  background: #fff;
  z-index: 100;
  box-shadow: 0 0 10px -6px rgba(0, 0, 0, 0.5);
  display: none;
  /* transform: scale(0); */
  visibility: hidden;
  transition: 0.3s;
}

.show {
  visibility: visible;
  display: block;
  /* transform: scale(1); */
}

.childwrap {
  height: max-content;
}

@media screen and (max-width: 640px) {
  .modal {
    top: 50px;
  }
}

